[FEATURE] Added new  type tag for tracking usage in external systems
